--- a/style.css
+++ b/style.css
@@ -9,11 +9,17 @@
   font-family: Aboreto;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -27,11 +33,12 @@ h1 {
 .container {
   display: flex;
   flex-wrap: wrap;
-  padding: 25px;
-  width: 600px;
-  height: 570px;
-  background-color: black;
+  align-items: center;
   justify-content: space-between;
+  padding: 20px;
+  width: 40%;
+  height: 80vh;
+  background-color: black;
   margin-top: 7px;
   border-radius: 15px;
 }
@@ -74,20 +81,21 @@ h1 {
 
 .card-img {
   background-color: white;
-  display: block;
-  width: 120px;
-  height: 120px;
+  width: 20%;
+  height: 15vh;
   border-radius: 15px;
   transition: 0.6s;
   transform-style: preserve-3d;
   cursor: pointer;
+  margin: 5px;
 }
 
 .img {
+  padding: 10px;
   display: none;
   border-radius: 15px;
-  width: 115px;
-  height: 115px;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
 }
 
@@ -108,3 +116,8 @@ footer{
   font-size: 15px;
   font-weight: bold;
 }
+
+
+
+
+
