--- a/media-query.css
+++ b/media-query.css
@@ -1,7 +1,8 @@
 /* ////////////////////// Media Queries ////////////////////// */
 @media (max-width: 1024px) {
   .container {
-    width: 45%;
+    width: 40%;
+    height: 80%;
   }
 }
 
