--- a/style.css
+++ b/style.css
@@ -29,7 +29,14 @@ h1 {
 }
 
 /* //////////////////////// Container principal ///////////////////////////// */
-
+.container-master {
+  width: 100vw;
+  height: 100vh; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -37,7 +44,7 @@ h1 {
   justify-content: space-between;
   padding: 20px;
   width: 40%;
-  height: 80vh;
+  height: 90%;
   background-color: black;
   margin-top: 7px;
   border-radius: 15px;
@@ -82,7 +89,7 @@ h1 {
 .card-img {
   background-color: white;
   width: 20%;
-  height: 15vh;
+  height: 20%;
   border-radius: 15px;
   transition: 0.6s;
   transform-style: preserve-3d;
